deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: hello-world
spec: {}
status: {}
