deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello-world
  creationTimestamp: null
  labels:
    app: hello-world
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-world
    spec:
      containers:
      - image: ghcr.io/gbrawl/node-hello-world:main
        name: hello-world
        resources: {}
        imagePullPolicy: Always
status: {}
