deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-world-test
  name: hello-world-test
  namespace: hello-world-test
spec:
  ports:
  - name: web
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hello-world-test
  type: ClusterIP
status:
  loadBalancer: {}
