deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: hello-world-test
  name: hello-world-test
  namespace: hello-world-test
spec:
  rules:
  - host: hello-world-test.apps.openshift.bvb.local
    http:
      paths:
      - backend:
          serviceName: hello-world-test
          servicePort: web
---
